workflow of quickmenu almost done

--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,11 @@ body {
 
   cursor: url("data:image/svg+xml,%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='-32px' y='-32px' width='32px' height='32px' viewBox='0 0 2000 2000' enable-background='new 0 0 2000 2000' xml:space='preserve'%3E%3Cimage id='image0' width='2000' height='2000' x='0' y='0' href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAB9AAAAfQAgMAAADnVizqAAAABGdBTUEAALGPC/xhBQAAACBjSFJN%0AAAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAADFBMVEUAAAD///93STaKWkSD%0AGHk2AAAAAXRSTlMAQObYZgAAAAFiS0dEAf8CLd4AAAAHdElNRQfmARwKBAhMRltIAAAUCUlEQVR4%0A2u3SvbVWVRSGUQkogX5uCQQi4c1tgioswQQCSrAKmjA3cQzEHPScYA3Gx9rPfPLz8+65f3rzPfv5%0AJ/2IQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCD%0AQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8G%0APRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0%0AYNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCD%0AQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCD3bD9%0A+v6yj18u+3zz9kePrwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INB%0ADwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9%0AGPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg%0A0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INB%0ADwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9%0AGPRg0INBD3bD8u5a9e/rO/Hh+ukvNx9/evThnBr0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0%0AYNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCD%0AQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8G%0APRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0%0AYNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCD%0AQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GXV/36prl+Rr1n+s78f7mTny6/vjrRx/OqUEPBj0Y9GDQg0EP%0ABj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y%0A9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQ%0Ag0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EP%0ABj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y%0A9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQ9XUvr1ne3qje3Ik/rp/+6/rj%0APz/6cE4NejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAH%0Agx4MejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAHgx4M%0AejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDo%0AwaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAH%0Agx4MejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAHgx4MejDowaAHg66v%0Ae3HN8ubmTvx5fSc+Xj/9+ebjjz6cU4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGg%0AB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4Me%0ADHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4MeDHow%0A6MGgB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGg%0AB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4MeDHow6MGgB4Me%0ADHow6MGgB4MeDHow6MGg65tuWN5dq/59fSc+3Fypm48/PXL5Ta8fDfcdp0OHDh069J1Bhw4dOnTo%0A0KFDXxp06NChQ4cOHTr0pUGHDh06dOjQoUNfGnTo0KFDhw4dOvSlQYcOHTp06NChQ18adOjQoUOH%0ADh069KVBhw4dOnTo0KFDXxp06NChQ4cOHTr0pUGHDh06dOjQoUNfGnTo0KFDhw4dOvSlQYcOHTp0%0A6NChQ18adOjQoUOHDh069KVBhw4dOnTo0KFDXxp06NChQ4cOHTr0pUGHDh06dOjQoUNfGnTo0KFD%0Ahw4dOvSlQYcOHTp06NChQ18adOjQoUOHDh069KVBhw4dOnTo0KFDXxp06NChQ4cOHTr0pUGHDh06%0AdOjQoUNfGnTo0KFDhw4dOvSlQYcOHTp06NChQ18adOjQoUOHDh069KVBD6Lf9Op6+vM16j/Xd+L9%0AzZ34NDr3FzdsN//2G3To0KFDh35U0KFDhw79yKBDhw4d+pFBhw4dOvQjgw4dOnToRwYdOnTo0I8M%0AOnTo0KEfGXTo0KFDPzLo0KFDh35k0KFDhw79yKBDhw4d+pFBhw4dOvQjgw4dOnToRwYdOnTo0I8M%0AOnTo0KEfGXTo0KFDPzLo0KFDh35k0KFDhw79yKBDhw4d+pFBhw4dOvQjgw4dOnToRwYdOnTo0I8M%0AOnTo0KEfGXTo0KFDPzLo0KFDh35k0KFDhw79yKBDhw4d+pFBhw4dOvQjgw4dOnToRwYdOnTo0I8M%0AOnTo0KEfGXTo0KFDPzLo0KFDh35k0KFDhw79yKBDhw4d+pFBhw4dOvQjgw4dOnToRwYdOnTo0I8M%0AOnTo0KEfGXTo0KFDPzLo0KFDh35k0IPoN728Ppm3N6o35/7H9dN/XX/8l5u339yJp0ef7Q8b9GDQ%0Ag0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EP%0ABj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y%0A9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQ%0Ag0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EP%0ABj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBl1f9+LmYG/uxJ/X%0Aar9D/xGDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjB%0AoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeD%0AHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6%0AMOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjB%0AoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoAeDHgx6MOjBoOub%0A3ox6vr4yn28ef/T4atCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0%0AYNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCD%0AQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8G%0APRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0%0AYNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCD%0AQQ8GPRj0A3txc+7vR/1+/fK313fiy82/PT368LYGPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8G%0APRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0%0AYNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCD%0AQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8G%0APRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0%0AYNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQT+xl9cH98sN25tRr6//7e7G3dyJT6OPnxz0YNCDQQ8GPRj0%0AYNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCD%0AQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8G%0APRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0%0AYNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCD%0AQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPRj0YNCDQQ8GPdgN+l0P/ffZrw97NNwk6BuX%0AD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+%0Acfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw%0A6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuX%0AD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+%0Acfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw%0A6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuX%0AD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+%0Acfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw%0A6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuX%0AD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cfkw6BuXD4O+cbn+r1fXas9fLvsMfWPQg0EP%0ABj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y%0A9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQ%0Ag0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EP%0ABj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y%0A9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GDQg0EPBj0Y9GA36MMevU7/GfRg%0A0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INB%0ADwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9%0AGPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg%0A0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INB%0ADwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBDwY9GPRg0INBD/Z90f8FPGV66/Ru%0ArDwAAAAldEVYdGRhdGU6Y3JlYXRlADIwMjItMDEtMjhUMTA6MDQ6MDgrMDA6MDD1Ci/JAAAAJXRF%0AWHRkYXRlOm1vZGlmeQAyMDIyLTAxLTI4VDEwOjA0OjA4KzAwOjAwhFeXdQAAAABJRU5ErkJggg==' /%3E%3C/svg%3E") -32 -32,
     pointer;
+  opacity: 0;
+  transition: opacity 0.25s ease-out;
+}
+.showQuickMenu {
+  opacity: 1;
 }
 .circleMenu {
   position: relative;
@@ -62,6 +67,18 @@ body {
   fill: var(--data-color);
 }
 
+.circleMenu button::before {
+  position: absolute;
+  content: '';
+  width: 60%;
+  height: 180%;
+  top: 50%;
+  transform-origin: top;
+
+  background-color: transparent;
+  border-radius: 0 0 50% 50%;
+}
+
 .circleMenu button::after {
   content: '';
   position: absolute;
@@ -84,32 +101,58 @@ body {
   grid-area: 1/3/1/3;
   animation: igniAnimation var(--sign-time) var(--sign-transition);
 }
+.igni::before {
+  height: 200% !important;
+}
 .axii {
   transform: translateY(-25px) translateX(-25px);
   animation: axiiAnimation var(--sign-time) var(--sign-transition);
   grid-area: 2/2/2/2;
+}
+.axii::before {
+  transform: rotate(-45deg);
 }
 .quen {
   transform: translate(25px, -25px);
   animation: quenAnimation var(--sign-time) var(--sign-transition);
   grid-area: 2/4/2/4;
 }
+.quen::before {
+  transform: rotate(45deg);
+}
 .yrden {
   animation: yrdenAnimation var(--sign-time) var(--sign-transition);
   grid-area: 3/1/3/1;
+}
+.yrden::before {
+  height: 225% !important;
+  transform: rotate(-90deg);
 }
 .aard {
   animation: aardAnimation var(--sign-time) var(--sign-transition);
   grid-area: 3/5/3/5;
 }
+.aard::before {
+  height: 225% !important;
+  transform: rotate(90deg);
+}
 .sword {
   animation: swordAnimation var(--sign-time) var(--sign-transition);
   grid-area: 4/2/4/2;
+  transform: translateY(25px) translateX(-25px);
+}
+.sword::before {
+  transform: rotate(-125deg);
 }
 .fist {
   animation: fistAnimation var(--sign-time) var(--sign-transition);
   grid-area: 4/4/4/4;
+  transform: translateY(25px) translateX(25px);
 }
+.fist::before {
+  transform: rotate(125deg);
+}
+
 @keyframes igniAnimation {
   0% {
     transform: translate(0, 200px);
@@ -155,7 +198,7 @@ body {
     transform: translate(100px, -100px);
   }
   100% {
-    transform: translateY(0) translateX(0);
+    transform: translateY(25px) translateX(-25px);
   }
 }
 @keyframes fistAnimation {
@@ -163,9 +206,10 @@ body {
     transform: translate(-100px, -100px);
   }
   100% {
-    transform: translateY(0) translateX(0);
+    transform: translateY(25px) translateX(25px);
   }
 }
+
 .quickMenu footer {
   width: 100%;
   display: flex;
@@ -174,7 +218,7 @@ body {
 }
 .copyRights {
   font-size: 10px;
-  width: 300px;
+  width: 380px;
   background-image: linear-gradient(#e5e5e5, #2e4252 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
